<resources>
    <string name="app_name">yaadtaxi</string>
    <string name="title_activity_dash_board">DashBoard</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="payment">Payment</string>
    <string name="your_trip">Your Trip</string>
    <string name="coupon">Coupon</string>
    <string name="wallet">Wallet</string>
    <string name="logout">Logout</string>
    <string name="share">Share</string>
    <string name="help">Help</string>

    <string name="google_maps_key" templateMergeStrategy="preserve" translatable="false">AIzaSyCIdZrCtAe6Zhb5YyhVsBNh79dyMsNa6TM</string>
    <string name="where_to_go">Where to go?</string>
    <string name="set_pin_location">Set Pin Location</string>
    <string name="your_location">Your Location</string>
    <string name="done">Done</string>
    <string name="pay">Pay driver via POS machine</string>
    <string name="call">CALL</string>
    <string name="cancel_ride">Cancel Ride</string>
    <string name="estimated_fare">Estimated Fare</string>
    <string name="eta">ETA</string>
    <string name="model">Model</string>
    <string name="no_of_passenger">Enter No Of passenger</string>
    <string name="no_of_bags">Enter No Of  Bags</string>
    <string name="ride">Ride</string>
    <string name="submit">Submit</string>

    <string name="enteremail">Enter email address to login</string>
    <string name="enteremail2">Enter your email  address here</string>
    <string name="emailaddress">What\'s your email address?</string>
    <string name="signup">I need to create an account</string>
    <string name="description">Thank you for choosing pngtree, we already sent you an email within a verification link, please click the link to finish the registration. If you havent received the emailin 1 minute, please click the resend button, we will send you another email. Resend to try again. </string>
    <string name="otpdis">Thank you for choosing pngtree, we already sent you an email within a verification link, please click the link to finish the registration. If you havent received the emailin 1 minute, please click the resend button, we will send you another email. Resend to try again. </string>
    <string name="schedule">Schedule</string>
    <string name="forget_password">I forgot my password</string>
    <string name="welcome_back">Welcome back,sign in to continue</string>
    <string name="enterpassword">Enter Your Password</string>
    <string name="wallettext">Your wallet ammount is:</string>
    <string name="taxiHelp">YaadTaxi User App Help</string>
    <string name="helpDescription">Our team person contact you soon!</string>
    <string name="walletTextDesc">Your wallet ammout is</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="reason">Reason To Cancel</string>
    <string name="check_ride">Check Ride Status</string>
    <string name="rate_card">Rate Card</string>
    <string name="basic_fare">Basic Fare</string>
    <string name="farepkm">Fare/km</string>
    <string name="fare_type">Fare Type</string>
    <string name="bags">Bags</string>
    <string name="capacity">Capacity</string>
    <string name="no_trip_past">You have no past trips</string>
    <string name="no_trip_upcomming_past">You have no upcoming trips</string>
</resources>
