<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:background="@color/white"
    android:orientation="vertical">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center|clip_vertical"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/rate_card"
            android:textColor="@color/back"
            android:textSize="24sp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/car"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:padding="20dp"
            android:src="@drawable/car" />

        <TextView
            android:id="@+id/service_detail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/rate_card"
            android:textColor="@color/back"
            android:textSize="20sp"

            />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingStart="15dp"
        android:paddingLeft="15dp"

        android:paddingEnd="15dp"
        android:paddingRight="15dp">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="30dp"

            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight=".7"
                android:gravity="center_vertical"
                android:text="@string/basic_fare"
                android:textColor="@color/back"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/basic_fare"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight=".2"
                android:gravity="center_vertical|right"
                android:text="$9.36"
                android:textColor="@color/back"

                android:textSize="16sp" />
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="30dp"

            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight=".7"
                android:gravity="center_vertical"
                android:text="@string/farepkm"
                android:textColor="@color/back"

                android:textSize="16sp" />

            <TextView
                android:id="@+id/farepkm"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight=".2"
                android:gravity="center_vertical|right"
                android:text="4 mins"
                android:textColor="@color/back"

                android:textSize="16sp" />
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="30dp"

            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight=".6"
                android:gravity="center_vertical"
                android:text="@string/fare_type"
                android:textColor="@color/back"

                android:textSize="16sp" />

            <TextView
                android:id="@+id/fare_type"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight=".4"
                android:gravity="center_vertical|right"
                android:text="Sedan"
                android:textColor="@color/back"

                android:textSize="16sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="30dp"

            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight=".7"
                android:gravity="center_vertical"
                android:text="@string/bags"
                android:textColor="@color/back"

                android:textSize="16sp" />

            <TextView
                android:id="@+id/bags"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight=".2"
                android:gravity="center_vertical|right"
                android:text="4 mins"
                android:textColor="@color/back"

                android:textSize="16sp" />
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="30dp"

            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight=".7"
                android:gravity="center_vertical"
                android:text="@string/capacity"
                android:textColor="@color/back"

                android:textSize="16sp" />

            <TextView
                android:id="@+id/capacity"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight=".2"
                android:gravity="center_vertical|right"
                android:text="Sedan"
                android:textColor="@color/back"

                android:textSize="16sp" />
        </LinearLayout>
    </LinearLayout>


    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"

        android:background="@color/transp" />

    <TextView
        android:id="@+id/done"
        android:layout_width="match_parent"
        android:layout_height="50dp"

        android:gravity="center"
        android:text="@string/done"

        android:textSize="20sp" />


</LinearLayout>
