<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".Email">

    <ImageView
        android:id="@+id/backarrowbtnpass"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginLeft="@dimen/emailleftmargin"
        android:layout_marginTop="20dp"
        android:padding="5dp"
        android:src="@drawable/ic_left_arrow" />

    <TextView
        android:id="@+id/emaillable"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/backarrowbtnpass"
        android:textColor="@color/back"
        android:layout_marginLeft="@dimen/emailleftmargin"
        android:layout_marginTop="15dp"
        android:inputType="textEmailAddress"
        android:text="@string/welcome_back"
        android:textSize="22dp" />




    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/emaillable"
        app:boxStrokeColor="@color/back"
        app:boxBackgroundColor="@color/back"
        android:hint="@string/enterpassword"
        android:textColorHint="@color/back"
        android:theme="@style/EditTextHint">

        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/emailleftmargin"
            android:inputType="textPassword"
            android:singleLine="true"
            android:backgroundTint="@color/black"
            android:textColorHint="@color/back"
            android:textSize="20dp"

            />

    </com.google.android.material.textfield.TextInputLayout>


    <TextView
        android:id="@+id/signupbtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/forget_password"
        android:layout_alignParentLeft="true"
        android:textColor="@color/blue"

        android:layout_marginLeft="20dp"
        android:layout_marginBottom="22dp"
        android:text="@string/signup"
        android:textSize="15dp" />

    <TextView
        android:id="@+id/forget_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/blue"

        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="21dp"
        android:layout_marginLeft="21dp"
        android:layout_marginBottom="30dp"
        android:text="@string/forget_password"
        android:textSize="15dp" />



    <ImageButton
        android:id="@+id/nextbtn"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_margin="@dimen/emailleftmargin"
        android:background="@drawable/roundfloatingbtn"
        android:elevation="5dp"
        android:padding="10dp"
        android:src="@drawable/ic_right_arrow"
        android:tint="@color/white" />

</RelativeLayout>