<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"

    android:background="@color/white"
    android:orientation="vertical"
    android:paddingStart="15dp"
    android:paddingLeft="15dp"

    android:paddingEnd="15dp"
    android:paddingRight="15dp">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:orientation="vertical"
        android:weightSum=".9">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight=".3"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight=".7"
                android:gravity="center_vertical"
                android:text="@string/estimated_fare"
                android:textColor="@color/back"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/price"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight=".2"
                android:gravity="center_vertical|right"
                android:text="$9.36"
                android:textColor="@color/back"

                android:textSize="16sp" />
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight=".3"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight=".7"
                android:gravity="center_vertical"
                android:text="@string/eta"
                android:textColor="@color/back"

                android:textSize="16sp" />

            <TextView
                android:id="@+id/eta"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight=".2"
                android:gravity="center_vertical|right"
                android:text="4 mins"
                android:textColor="@color/back"

                android:textSize="16sp" />
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight=".3"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight=".7"
                android:gravity="center_vertical"
                android:text="@string/model"
                android:textColor="@color/back"

                android:textSize="16sp" />

            <TextView
                android:id="@+id/model"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight=".2"
                android:gravity="center_vertical|right"
                android:text="Sedan"
                android:textColor="@color/back"

                android:textSize="16sp" />
        </LinearLayout>
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingBottom="10dp">


        <androidx.cardview.widget.CardView
            android:id="@+id/_schedule"
            android:layout_width="0dp"

            android:layout_height="@dimen/where_to_go_size"

            android:layout_gravity="bottom"

            android:layout_marginRight="5dp"

            android:layout_weight=".5"
            android:background="@drawable/button_background"
            android:elevation="@dimen/toolbar_top">

            <TextView
                android:id="@+id/schedule"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/button_background"
                android:gravity="center"

                android:text="@string/schedule"
                android:textAllCaps="true"
                android:textColor="@color/white"
                android:textSize="18sp" />

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/card"
            android:layout_width="0dp"
            android:layout_height="@dimen/where_to_go_size"
            android:layout_gravity="bottom"

            android:layout_marginLeft="5dp"

            android:layout_weight=".5"
            android:background="@drawable/button_background"
            android:elevation="@dimen/toolbar_top">

            <TextView
                android:id="@+id/ride"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/button_background"
                android:gravity="center"
                android:text="@string/ride"
                android:textAllCaps="true"
                android:textColor="@color/white"
                android:textSize="18sp" />

        </androidx.cardview.widget.CardView>

    </LinearLayout>
</LinearLayout>
