<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginLeft="@dimen/toolbar_top"
    android:layout_marginRight="@dimen/toolbar_top"

    android:orientation="vertical"
    tools:context=".Ride.PickLocation">

    <ImageView
        android:id="@+id/back"
        android:layout_width="48dp"
        android:layout_height="56dp"
        android:src="@drawable/ic_arrow_back_black_24dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/toolbar_top"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight=".1"
            android:orientation="vertical"
            android:weightSum="1">

            <ImageView
                android:layout_width="10dp"
                android:layout_height="10dp"
                android:layout_gravity="center"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="5dp"
                android:background="@drawable/circle"
                android:backgroundTint="@color/transp" />

            <View
                android:layout_width="1dp"
                android:layout_height="30dp"

                android:layout_gravity="center"
                android:layout_marginBottom="5dp"
                android:background="@color/back" />

            <ImageView
                android:layout_width="10dp"
                android:layout_height="10dp"
                android:layout_gravity="center_horizontal"


                android:background="@color/back" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight=".9"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/lightgrey"
                android:orientation="horizontal">

                <AutoCompleteTextView
                    android:id="@+id/from"
                    android:layout_width="0dp"
                    android:layout_height="40dp"
                    android:layout_weight=".9"
                    android:background="@android:color/transparent"
                    android:ems="10"
                    android:hint="@string/your_location"
                    android:maxLines="1"
                    android:paddingStart="7dp"

                    android:paddingLeft="7dp"
                    android:singleLine="true"
                    android:textSize="16sp" />

                <ImageView
                    android:id="@+id/close_from"
                    android:layout_width="0dp"
                    android:layout_height="24dp"
                    android:layout_gravity="center"
                    android:layout_weight=".14"
                    android:src="@drawable/cancel"
                    android:visibility="gone" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/toolbar_top"
                android:background="@color/darkgrey"
                android:orientation="horizontal">

                <AutoCompleteTextView
                    android:id="@+id/to"
                    android:layout_width="0dp"
                    android:layout_height="40dp"
                    android:layout_weight=".9"
                    android:background="@android:color/transparent"
                    android:hint="@string/where_to_go"
                    android:maxLines="1"
                    android:paddingStart="7dp"
                    android:paddingLeft="7dp"
                    android:singleLine="true"
                    android:textSize="16sp" />

                <ImageView
                    android:id="@+id/close_to"
                    android:layout_width="0dp"
                    android:layout_height="24dp"
                    android:layout_gravity="center"
                    android:layout_weight=".14"
                    android:src="@drawable/cancel"
                    android:visibility="gone" />
            </LinearLayout>

        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/pick_location"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/top"

        android:orientation="horizontal">

        <ImageView

            android:layout_width="0dp"
            android:layout_height="20dp"
            android:layout_weight=".16"
            android:src="@drawable/marker" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight=".8"
            android:gravity="center_vertical"
            android:text="@string/set_pin_location"
            android:textColor="@color/back"
            android:textSize="14sp" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginTop="@dimen/toolbar_top"
        android:background="@color/lightgrey" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/results"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />
</LinearLayout>