<?xml version="1.0" encoding="utf-8"?>

<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Map.DropMapLocation">

    <fragment xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/map"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MapsActivity" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/back"
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:src="@drawable/ic_arrow_back_black_24dp" />

        <LinearLayout
            android:id="@+id/to_from"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/back"
            android:layout_alignParentRight="true"
            android:layout_marginStart="@dimen/top"
            android:layout_marginLeft="@dimen/top"
            android:layout_marginTop="@dimen/toolbar_top"
            android:layout_marginEnd="@dimen/top"
            android:layout_marginRight="@dimen/top"
            android:background="@color/white"
            android:orientation="horizontal"

            android:visibility="gone">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight=".1"
                android:orientation="vertical"
                android:weightSum="1">

                <ImageView
                    android:layout_width="10dp"
                    android:layout_height="10dp"
                    android:layout_gravity="center"
                    android:layout_marginTop="@dimen/toolbar_top"
                    android:layout_marginBottom="5dp"
                    android:background="@drawable/circle"
                    android:backgroundTint="@color/transp" />

                <View
                    android:layout_width="1dp"
                    android:layout_height="30dp"

                    android:layout_gravity="center"
                    android:layout_marginBottom="5dp"
                    android:background="@color/back" />

                <ImageView
                    android:layout_width="10dp"
                    android:layout_height="10dp"
                    android:layout_gravity="center_horizontal"


                    android:background="@color/back" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight=".9"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <EditText
                        android:id="@+id/from"
                        android:layout_width="0dp"
                        android:layout_height="40dp"
                        android:layout_weight=".9"
                        android:background="@android:color/transparent"
                        android:ems="10"
                        android:hint="@string/your_location"
                        android:maxLines="1"
                        android:paddingStart="7dp"

                        android:paddingLeft="7dp"
                        android:singleLine="true"
                        android:textSize="16sp" />

                    <ImageView
                        android:id="@+id/close_from"
                        android:layout_width="0dp"
                        android:layout_height="24dp"
                        android:layout_gravity="center"
                        android:layout_weight=".14"
                        android:src="@drawable/cancel"
                        android:visibility="gone" />
                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"

                    android:layout_gravity="center"
                    android:background="@color/back"

                    />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/toolbar_top"

                    android:orientation="horizontal">

                    <EditText
                        android:id="@+id/to"
                        android:layout_width="0dp"
                        android:layout_height="40dp"
                        android:layout_weight=".9"
                        android:background="@android:color/transparent"
                        android:hint="@string/where_to_go"
                        android:maxLines="1"
                        android:paddingStart="7dp"
                        android:paddingLeft="7dp"
                        android:singleLine="true"
                        android:textSize="16sp" />


                </LinearLayout>

            </LinearLayout>
        </LinearLayout>
    </RelativeLayout>

    <FrameLayout
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_margin="@dimen/toolbar_top"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/center"
            android:layout_width="24dp"
            android:layout_height="36dp"

            android:layout_gravity="center"
            android:src="@drawable/marker" />

        <ImageView
            android:id="@+id/current_location"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_gravity="right"

            android:src="@drawable/round_tracker"
            android:visibility="gone" />
    </FrameLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.cardview.widget.CardView
            android:id="@+id/card"
            android:layout_width="match_parent"
            android:layout_height="@dimen/where_to_go_size"


            android:layout_alignParentBottom="true"
            android:layout_marginLeft="@dimen/sides"
            android:layout_marginRight="@dimen/sides"

            android:layout_marginBottom="@dimen/bottom"
            android:background="@color/white"
            android:elevation="@dimen/toolbar_top"
            app:cardBackgroundColor="@color/back">

            <TextView
                android:id="@+id/done"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/done"
                android:textAllCaps="true"
                android:textColor="@color/white"
                android:textSize="18sp" />

        </androidx.cardview.widget.CardView>

        <include
            android:id="@+id/downselection"
            layout="@layout/downselection"
            android:layout_width="match_parent"
            android:layout_height="400dp"
            android:layout_alignParentBottom="true"
            android:animateLayoutChanges="true"
            android:visibility="gone" />

        <include
            android:id="@+id/second"
            layout="@layout/details"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_alignParentBottom="true"
            android:animateLayoutChanges="true"
            android:visibility="gone" />
    </RelativeLayout>
</FrameLayout>